<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_login_slider">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <RelativeLayout
            android:id="@+id/linearlayout_login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/ly_space"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:orientation="vertical"
                    android:visibility="visible" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="100dp"
                    android:gravity="top|center"
                    android:orientation="horizontal"
                    android:weightSum="1.0">

                    <ImageView
                        android:id="@+id/imageView1"
                        android:layout_width="0dip"
                        android:layout_height="fill_parent"
                        android:layout_weight="0.5"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/app_name"
                        android:scaleType="fitCenter"
                        android:src="@drawable/logo_white" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ly_space_2"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:orientation="vertical"
                    android:visibility="visible" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:descendantFocusability="beforeDescendants"
                    android:focusableInTouchMode="true"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:gravity="top|center"
                        android:orientation="horizontal"
                        android:paddingLeft="29dp"
                        android:paddingRight="29dp">

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/input_layout_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:theme="@style/TextLabel">

                            <android.support.design.widget.TextInputEditText
                                android:id="@+id/etUsuario"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:ems="10"
                                android:hint="USUARIO"
                                android:inputType="textNoSuggestions|textEmailAddress"
                                android:textColor="@color/blanco" />

                        </android.support.design.widget.TextInputLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="top|center"
                        android:orientation="horizontal"
                        android:paddingLeft="29dp"
                        android:paddingRight="29dp">

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/input_layout_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:theme="@style/TextLabel">

                            <android.support.design.widget.TextInputEditText
                                android:id="@+id/etClave"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:ems="10"
                                android:hint="CLAVE"
                                android:inputType="numberDecimal|numberPassword"
                                android:textColor="@color/blanco" />

                        </android.support.design.widget.TextInputLayout>

                    </LinearLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/btnLoginn"
                            android:layout_width="match_parent"
                            android:layout_height="45dip"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginLeft="43dp"
                            android:layout_marginRight="43dp"
                            android:layout_marginTop="10dp"
                            android:background="@drawable/btn_login_white"

                            android:gravity="center_vertical|center_horizontal"
                            android:text="@string/lbl_btn_loguear"
                            android:textColor="@drawable/text_color_btn_login" />
                    </RelativeLayout>

                </LinearLayout>

            </LinearLayout>


        </RelativeLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center_vertical|center_horizontal"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <ImageView
                android:id="@+id/iv_targetmaps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:src="@drawable/logo_target"/>

            <TextView
                android:id="@+id/tvVersion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/app_version"
                android:textColor="@color/blanco"
                android:textSize="12dp" />

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>